[package]
name = "EMX_Kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = { version = "0.14.11", default-features = false }
lazy_static = { version = "=1.4.0", default-features = false }  # Note the "=1.4.0"
bootloader = { version = "0.9.23", default-features = false }
spin = { version = "0.9.8", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"